argocd/apps/infra/monitoring/kiali/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Kiali
    gethomepage.dev/icon: mdi-network-pos
    gethomepage.dev/description: "Kiali is a management console for Istio service mesh."
    gethomepage.dev/pod-selector: app.kubernetes.io/name=kiali
  labels:
    app.kubernetes.io/instance: kiali-app
  name: kiali-httproute
  namespace: kiali
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - kiali.yanello.net
  rules:
  - backendRefs:
    - name: kiali
      namespace: kiali
      port: 20001
